[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/cars/audirx8.glb" type="PackedScene" id=1]
[ext_resource path="res://scripts/WheelEffect.gd" type="Script" id=2]
[ext_resource path="res://assets/sounds/217542__medartimus__car-breaking-skid-01.wav" type="AudioStream" id=3]

[sub_resource type="SpatialMaterial" id=1]
albedo_color = Color( 0.345098, 0.345098, 0.317647, 1 )
metallic = 0.09
roughness = 0.37

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.886275, 0.105882, 0.105882, 1 )
emission_enabled = true
emission = Color( 0.792157, 0.207843, 0.0509804, 1 )
emission_energy = 1.0
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0.25098, 0.584314, 0.521569, 1 )
emission_enabled = true
emission = Color( 0, 0, 0, 1 )
emission_energy = 1.0
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 0.258824, 0.584314, 0.239216, 1 )

[sub_resource type="SpatialMaterial" id=5]
flags_transparent = true
albedo_color = Color( 1, 1, 1, 0.129412 )

[sub_resource type="BoxShape" id=6]
extents = Vector3( 1.17671, 0.394972, 2.57439 )

[node name="Car" instance=ExtResource( 1 )]
mass = 46.1
continuous_cd = true

[node name="Light" parent="." index="0"]
visible = false

[node name="bottom" parent="." index="1"]
transform = Transform( -0.01, 0, -8.74228e-10, 0, 0.01, 0, 8.74228e-10, 0, -0.01, 0, -9.5, 0.2 )

[node name="front_left" parent="." index="2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.88, 0.2, 1.89 )
use_as_traction = true
use_as_steering = true
wheel_radius = 0.38
suspension_travel = 0.15
suspension_stiffness = 80.0
damping_compression = 0.8
damping_relaxation = 0.9

[node name="front_right" parent="." index="3"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.88, 0.2, 1.89 )
use_as_traction = true
use_as_steering = true
wheel_radius = 0.38
suspension_travel = 0.15
suspension_stiffness = 80.0
damping_compression = 0.8
damping_relaxation = 0.9

[node name="back_left" parent="." index="4"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.88, 0.2, -1.08 )
wheel_radius = 0.38
suspension_travel = 0.15
suspension_stiffness = 80.0
damping_compression = 0.8
damping_relaxation = 0.9

[node name="back_right" parent="." index="5"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.88, 0.2, -1.08 )
wheel_radius = 0.38
suspension_travel = 0.15
suspension_stiffness = 80.0
damping_compression = 0.8
damping_relaxation = 0.9

[node name="audi_r8" parent="." index="6"]
transform = Transform( 0.01, 0, 0, 0, 0, -0.01, 0, 0.01, 0, 0, 0.5, 0.7 )

[node name="back_lights001" parent="audi_r8/audi_r8001/back_movement/front_movement/car1/back/back_lights" index="0"]
material/0 = SubResource( 1 )
material/1 = SubResource( 2 )
material/2 = SubResource( 3 )

[node name="back_lights003" parent="audi_r8/audi_r8001/back_movement/front_movement/car1/back/back_lights" index="1"]
material/0 = SubResource( 4 )

[node name="back_lights_glass" parent="audi_r8/audi_r8001/back_movement/front_movement/car1/back/back_lights" index="2"]
material/0 = SubResource( 5 )

[node name="license_plate006" parent="audi_r8/audi_r8001/back_movement/front_movement/car1/back" index="16"]
visible = false

[node name="CollisionShape" type="CollisionShape" parent="." index="8"]
transform = Transform( 0.897977, 0, 0, 0, 0.942102, 0, 0, 0, 0.95316, 0.007703, 0.472288, 0.483035 )
shape = SubResource( 6 )

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="." index="9"]
stream = ExtResource( 3 )
unit_db = 8.834
script = ExtResource( 2 )
